# mei-huo

./: .gitignore
coalplan-ai/: .gitignore  README.md  alembic.ini  pyproject.toml
coalplan-ai/data/real_inputs/: lawa_spillway_bid.normalized.md  ningxia_coal_fire_bid.normalized.md  ningxia_coal_fire_bid.raw.md
coalplan-ai/data/real_outputs/: ningxia_coal_fire_generated.source_driven.md
coalplan-ai/docs/: api-workbench.md  generation-control-pipeline.md  markdown_input_spec.md  pattern-library-api.md  phase1_architecture.md  phase1_traceability.md  project-structure.md  run-with-deepseek.md  source-evidence-mapping.md  stable-convergence-v0.1.md  v0.1-runbook.md
coalplan-ai/migrations/: env.py
coalplan-ai/migrations/versions/: 0001_initial_workspace.py  0002_outline_target_word_count.py
coalplan-ai/src/coalplan/: __init__.py  main.py  settings.py
coalplan-ai/tests/integration/: test_coal_fire_pipeline_fake_llm.py  test_database_workspace_store.py  test_generation_control_api.py  test_pattern_library_api.py  test_pre_generation_outline_refine_api.py  test_revision_context_pipeline.py
coalplan-ai/tests/unit/: test_chapter_prompt.py  test_chapter_writing_guidance.py  test_content_revision_plan.py  test_content_revision_prompt.py  test_iteration_plan.py  (+44 more)
coalplan-ai/tools/: audit_generation_quality.py  audit_pattern_card_usage.py  compare_generation_runs.py  compare_pattern_card_usage.py  diagnose_trace_evidence.py  docx_to_markdown.py  plan_generation_revisions.py  run_deepseek_full_generation.py  run_evidence_targeted_revision.py  run_workspace_tree_flow.py
(+824 files in other folders)
