[project]
name = "coalplan-ai"
version = "0.1.0"
description = "Coal-fire construction organization markdown generation prototype"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "alembic",
  "python-multipart",
  "uvicorn",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = ["src"]
